--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.19",
     "@types/express-handlebars": "^6.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
     "handlebars-i18n": "^1.6.2",
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.20",
+    "@types/express-session": "^1.17.9",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
